[package]
name = "rustlike"
version = "0.1.0"
authors = ["Spencer Judge <sushisource@gmail.com>"]
edition = "2018"

[dependencies]
ggez = "0.5.0-rc.2"
env_logger = "0.6"
lazy_static = "1.3"
log = "0.4"
time = "0.1"
nalgebra = "0.18"
ncollide2d = "0.19"
rand = "0.5"
derive-new = "0.5"
num-derive = "0.2"
num-traits = "0.2"
num = "0.1"
timebomb = "*"

[workspace]
members = ["roguelike-derive"]

[dependencies.roguelike-derive]
path = "roguelike-derive"
