[package]
name = "rustlike"
version = "0.1.0"
authors = ["Spencer Judge <sushisource@gmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.4"
derive-new = "0.5"
env_logger = "0.8"
lazy_static = "1.3"
log = "0.4"
nalgebra = "0.18"
ncollide2d = "0.19"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4.0"
time = "0.2"
timebomb = "*"

[workspace]
members = ["roguelike-derive"]

[dependencies.roguelike-derive]
path = "roguelike-derive"
